--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -17,30 +17,74 @@
   </div>
 
   <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
+    <%= form.label :rating %>
+    <%= form.text_field :rating %>
+  </div> 
+  
+  <br>
 
   <div class="field">
-    <%= form.label :cuisine %>
-    <%= form.text_field :cuisine %>
+    <%= form.label :description %>
+    <%= form.text_area :description %>
   </div>
 
   <div class="field">
     <%= form.label :media_url %>
     <%= form.text_field :media_url %>
   </div>
-
+  
   <div class="field">
-    <%= form.label :prep_time %>
-    <%= form.time_select :prep_time %>
+    <%= form.label :instructions %>
+    <%= form.text_area :instructions %>
+  </div>
+  
+  <br>
+  <div class="field">
+    <%= form.label :cuisine %>
+    <%= form.text_field :cuisine %>
   </div>
 
   <div class="field">
     <%= form.label :meal_type %>
     <%= form.text_field :meal_type %>
   </div>
+  
+  <div class="field">
+    <%= form.label :cooking_method %>
+    <%= form.text_field :cooking_method %>
+  </div>
+  
+  <br>
+  <div class="field">
+    <%= form.label :prep_time %>
+    <%= form.time_select :prep_time %>
+  </div>
 
+  <div class="field">
+    <%= form.label :cook_time %>
+    <%= form.time_select :cook_time %>
+  </div>
+
+  <div class="field">
+    <%= form.label :servings %>
+    <%= form.number_field :servings %>
+  </div>
+
+  <div class="field">
+    <%= form.label :cost %>
+    <%= form.text_field :cost %>
+  </div>
+  
+     <div class="field">
+    <%= form.label :favourite %>
+    <%= form.check_box :favourite %>
+  </div>
+
+  <div class="field">
+    <%= form.label :available %>
+    <%= form.check_box :available %>
+  </div>
+  
   <div class="actions">
     <%= form.submit %>
   </div>
