--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,3 @@
 <% provide(:title, "Home") %>
 
-<h1>Chef Cloud</h1>
-<p>Welcome to Cloud Chef</p>
-
-
-<%=render 'layouts/featured'%>
+<%=render 'layouts/categories'%>
