--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,9 @@
 <footer class="foot">
     <% if session[:login] == 1 %>    
     <%= link_to 'New Recipe', new_recipe_path, :class =>"button", :role=>"button" %>
+   
     <% end %>
+    
+     <%= link_to 'New Category', new_category_path, :class =>"button", :role=>"button"  %>
 
 </footer>
