--- a/app/views/cupboard/index.html.erb
+++ b/app/views/cupboard/index.html.erb
@@ -1,3 +1,6 @@
+<% provide(:title, "Cupboard") %>
+<div id="static">
+
 <% if @cupboard.empty? %>
 <p>You have not added any ingredients yet</p>
 <% end %>
@@ -29,4 +32,4 @@
     
 </div>
 
- 
+</div>
