--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,20 @@
 <% provide(:title, "About") %>
 
-<h1>Chef Cloud</h1>
-<p>Welcome to Cloud Chef</p>
+<div id="static">
+     <div id="recipesContainer">
+        <h1>Chef Cloud</h1>
+        <h4>Welcome to Cloud Chef where we are passionate about food. </h4>
+        
+        <h4> We live to eat rather than eat to live. </h4>
+        
+        <h4>And nothing upsets us more than watching our friends eat the same tired meals for breakfast, lunch and dinner.</h4>
+        
+        <h4>That's why at Chef Cloud we have made it our mission to make everyone a <strong> culinary expert</strong>.</h4> 
+        
+        <h4>With our app we can help you to find new recipes from your weekly shop, suggest new dishes based on your preferences, and track the nutrients for a balanced diet.</h4>
+        
+        <h4>Join today and let us take the hassle out of cooking.</h4>
+        
+        <img src="/assets/Site/Spices.jpg">
+    </div>
+</div>
