--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -2,6 +2,7 @@
 
 <p id="notice"><%= notice %></p>
 
+<div id="static">
  <div id="ingredientsContainer">
   
   <h1>Ingredients</h1>
@@ -22,9 +23,12 @@
       <td><%= ingredient.title %></td>
       <td><%= ingredient.ing_type %></td>
       <td><a href="/cupboard/<%= ingredient.id %>" class="button"> Add To Cupboard</a></td>
-      <td><%= link_to 'Show',  ingredient, :class => "button", :role => "button" %></td>
+      <td> <%= link_to 'Show',  ingredient, :class => "button", :role => "button" %></td>
+      <% if session[:login] == 1 %>   
+      
       <td><%= link_to "Edit", edit_ingredient_path(ingredient) %></td>
       <td><%= link_to "Destroy", ingredient_path(ingredient), :confirm => "Are you sure?", :method => :delete %></td>
+      <% end %>
     </tr>
     <% end %>
   </tbody>
@@ -36,3 +40,4 @@
 <br>
 <%= link_to 'New Ingredient',  new_ingredient_path, :class => "button", :role => "button" %>
 
+</div>
