--- a/app/views/layouts/_categories.html.erb
+++ b/app/views/layouts/_categories.html.erb
@@ -1,7 +1,7 @@
 
  <div id="recipesContainer">
   
-  <h1>Featured Recipes</h1>
+  <h1> <strong>Today's Featured Recipes</strong></h1>
      
     <% @recipes.sort_by{|t| - t.created_at.to_i}.first(4).each do |recipe| %>
       <div class="recipehols">
@@ -10,11 +10,9 @@
         <%= link_to (image_tag recipe.media_url, :class => "recipeholsIm"), recipe %>
         <p><%= recipe.description %></p>
 
-       <p>Cooking Time (hh:mm): <%= recipe.prep_time.strftime("%H:%M") %>
+       <p>Cooking Time (hh:mm): <%= recipe.cook_time.strftime("%H:%M") %>
        <br>
-       <p>Cuisine: <%= recipe.cuisine %></p>
-       
-       <p> Meal Type: <%= recipe.meal_type %></p>
+      
        
        <p>
          <%= link_to 'Show',  recipe, :class => "button", :role => "button" %>
