--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,11 @@
 <footer class="foot">
     <% if session[:login] == 1 %>    
     <%= link_to 'New Recipe', new_recipe_path, :class =>"button", :role=>"button" %>
-   
+    <%= link_to 'New Category', new_category_path, :class =>"button", :role=>"button"  %>
     <% end %>
     
-     <%= link_to 'New Category', new_category_path, :class =>"button", :role=>"button"  %>
-
+    <div id="strapline">
+     <p><strong>Copyright 2018. All Rights reserved. Chef Cloud.</strong></p>
+     <p><strong>Any queries please contact <u>Queries@ChefCloud.com</u></strong></p>
+    </div>
 </footer>
