--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -39,5 +39,7 @@
 </div>
 
 <br>
+<% if session[:login] == 1 %> 
 <%= link_to 'New Recipe',  new_recipe_path, :class => "button", :role => "button" %>
+<% end %>
 </div>
